mudei a lingua de todos templaates ppara ingles
Signed-off-by: Win_Score <ws25jan19@gmail.com>

--- a/service.html
+++ b/service.html
@@ -88,11 +88,11 @@
         <div class="col-md-6 ">
           <div class="detail-box">
             <h2>
-              Conheca o Mundo  <br>
-              das Apostas
+              Discover the world <br>of betting
             </h2>
             <p>
-              Já aconteceu com tigo ,mesmo apostar na melhor enquipa voce perder, é porque o jogo ja tinha sido vendido para eles lucrarem , entao nos oferecemos informacao dos jogos manipulados no mundo todo.
+              It's happened to you, even if you bet on the best team you lose, it's because the game had already been sold for them to make a profit, so we offer information on rigged games around the world.
+              
             </p>
             
           </div>
@@ -106,7 +106,7 @@
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
-          What Our Clients Say
+          What Our Clients Say?
         </h2>
       </div>
       <div class="carousel-wrap layout_padding2-top ">
@@ -199,7 +199,7 @@
                 <div class="client_detail">
                   <div class="client_info">
                     <h6>
-                      Renan Calsio
+                      Renan Calsin
                     </h6>
                     <i class="fa fa-star" aria-hidden="true"></i>
                     <i class="fa fa-star" aria-hidden="true"></i>
@@ -234,7 +234,7 @@
   <section class="info_section ">
     <div class="container">
       <h4>
-        Informacoes sobre nos
+        Information about us
       </h4>
       <div class="row">
         <div class="col-lg-10 mx-auto">
