--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@
               About us
             </h2>
             <p>
-              nos somos uma agencia clandestina no mundo todo temos acesso a todos jogos manipulados no mundo todo, ao nos contactar vamos te dar resultados dos jogos manimpulados para teres vantagem e lucrares muito.
+              We are a clandestine agency all over the world, we have access to all rigged games around the world, when you contact us we will give you results from rigged games so you can have an advantage and make a lot of profit.
         
             </p>
             
