site centro ramo de vida
Signed-off-by: Win_Score <ws25jan19@gmail.com>

--- a/inscricao.html
+++ b/inscricao.html
@@ -52,7 +52,7 @@
                     </h2>
 
                     <div>
-                        <a href="inscricao.html"><button class="btn-gradiente">Faca a Sua Inscricao</button></a>
+                        <button class="btn-gradiente">Faca a Sua Inscricao</button>
                         <img  src="img/verificado.png" alt="imagem de fundo">
                     </div>
 
@@ -61,7 +61,23 @@
                 </div>
 
                 <div class="main-img">
-                    <img src="img/emp-bg.png" alt="imagem principal">
+                    <div class="boxForm">
+                        <form>
+                            
+                            <input placeholder="Nome: "><br>
+                            <input placeholder="Bilhete de Indeintidade"><br>
+                            <input type="date" placeholder="data de naicimento"><br>
+                            <select id="cursos" name="scursos" >
+
+                                <option value="Maquinas Pesadas">Selecionar Curso</option>
+                                <option value="Maquinas Pesadas">Maquinas Pesadas</option>
+                                <option value="Maquinas Pesadas">Ingles</option>
+                                <option value="Maquinas Pesadas">Montagem de Computadores</option>
+                                <option value="Maquinas Pesadas">Gestao de R. Humanos</option>
+                            </select><br>
+                            <button>Submeter Inscricao</button>
+                        </form>
+                    </div>
                 </div>
 
             </div>
@@ -120,58 +136,6 @@
     </section>
 
     <!--fim da section de info cursos-->
-
-
-    <!-- section more curses-->
-    <section class="difeCursos">
-        <div class="conteiner">
-            <div class="curso">
-                <img src="img/esc-bg.png" alt="curso eletroescavadeira">
-                <h3 class="tituloc">Eletroescavadeira</h3>
-                <p>
-                    Neste curso vais sair capacitado para operar maquinas pesadas (Curso Presencial)
-                </p>
-
-
-
-
-            </div>
-            <div class="curso">
-                <img src="img/esc-bg.png" alt="curso eletroescavadeira">
-                <h3 class="tituloc">Montagem e Reparacao de Computadores</h3>
-                <p>
-                    Neste curso vai aprender a montar, desmontar e reparar Computadores de  diversos tipos (Curso Online)
-                </p>
-
-
-
-
-            </div>
-            <div class="curso">
-                <img src="img/esc-bg.png" alt="curso de ingles">
-                <h3 class="tituloc">Ingles</h3>
-                <p>
-                    Neste curso vai ter instrutores capacitados e formados na lingua inglesa (Curso Online)
-                </p>
-
-
-
-
-            </div>
-
-
-
-
-
-        </div>
-
-
-
-
-    </section>
-    <!--and more curses-->
-
-
     <script src="scripts/main.js">
         
 
