--- a/cursos.html
+++ b/cursos.html
@@ -319,13 +319,6 @@
 
 
 
-</section>
-<!--and more curses-->
-
-    
-    <div style="height: 50px;">
-
-    </div>
     <section class="sc-and">
         <h2>Centro de Formacao Ramo da Vida</h2>
         <div class="conteiner">
@@ -362,17 +355,20 @@
         </div>
         <ul class="ul-social">
             <li><a href="#"><img src="img/facebook.png" alt="icon fb"></a></li>
-            <li><a href="#"><img src="img/facebook.png" alt="icon wp"></a></li>
-            <li><a href="#"><img src="img/facebook.png" alt="icon Gmail"></a></li>
+            <li><a href="#"><img src="img/whatsapp.png" alt="icon wp"></a></li>
+            <li><a href="#"><img src="img/gmail.png" alt="icon Gmail"></a></li>
 
 
         </ul>
+        <hr>
         <b><p>@desenvolvido pela <a href="#">BSoft Tecnologias</a></p><br>
         </b><p>aos 18/03/2025</p>
 
     </section>
 
     <!-- and section and -->
+
+
 
 
 
