--- a/inscricao.html
+++ b/inscricao.html
@@ -173,17 +173,20 @@
         </div>
         <ul class="ul-social">
             <li><a href="#"><img src="img/facebook.png" alt="icon fb"></a></li>
-            <li><a href="#"><img src="img/facebook.png" alt="icon wp"></a></li>
-            <li><a href="#"><img src="img/facebook.png" alt="icon Gmail"></a></li>
+            <li><a href="#"><img src="img/whatsapp.png" alt="icon wp"></a></li>
+            <li><a href="#"><img src="img/gmail.png" alt="icon Gmail"></a></li>
 
 
         </ul>
+        <hr>
         <b><p>@desenvolvido pela <a href="#">BSoft Tecnologias</a></p><br>
         </b><p>aos 18/03/2025</p>
 
     </section>
 
     <!-- and section and -->
+
+
 
     <script src="scripts/main.js">
         
