--- a/inscricao.html
+++ b/inscricao.html
@@ -62,7 +62,7 @@
 
                 <div class="main-img">
                     <div class="boxForm">
-                        <form method="post" action="malito:scaybuch@gmail.com">
+                        <form method="post" action="mailito:scaybuch@gmail.com">
                             
                             <input placeholder="Nome: " type="text" name="Nome Completo: "><br>
                             <input type="text" name="Bilhete de Identidade: " placeholder="Bilhete de Indeintidade ou Cartao de Eleitor"><br>
