--- a/index.html
+++ b/index.html
@@ -186,9 +186,9 @@
 
             </div>
             <!-- box show text about graduection -->
-            <div class="box-text-grad">
-                <h1>Imagens de graduacao dos nossos alunos </h1>
-                <p>
+            <div class="box-text-gradh" >
+                <h1 style="color: orange;">Imagens de graduacao dos nossos alunos </h1>
+                <p style="color: white;">
                     Aqui tem algumas imagens que mostram a graduacao 
                     de ums dos nossos alunos na graduacao, agoraa espandimos 
                     temos cursos presencias tais com Online.
