--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
             <!-- box show text about graduection -->
             <div class="box-text-gradh" >
-                <h1 style="color: orange;">Imagens de graduacao dos nossos alunos </h1>
+                <h1 style="color: orange; font-size: 25px;">Imagens de graduacao dos nossos alunos </h1>
                 <p style="color: white;">
                     Aqui tem algumas imagens que mostram a graduacao 
                     de ums dos nossos alunos na graduacao, agoraa espandimos 
