--- a/inscricao.html
+++ b/inscricao.html
@@ -75,7 +75,7 @@
                                 <option value="Maquinas Pesadas">Montagem de Computadores</option>
                                 <option value="Maquinas Pesadas">Gestao de R. Humanos</option>
                             </select><br>
-                            <button>Submeter Inscricao</button>
+                            <button type="submit">Submeter Inscricao</button>
                         </form>
                     </div>
                 </div>
