--- a/inscricao.html
+++ b/inscricao.html
@@ -64,10 +64,10 @@
                     <div class="boxForm">
                         <form method="post" action="mailito:scaybuch@gmail.com">
                             
-                            <input placeholder="Nome: " type="text" name="Nome Completo: "><br>
-                            <input type="text" name="Bilhete de Identidade: " placeholder="Bilhete de Indeintidade ou Cartao de Eleitor"><br>
-                            <input type="date" name="Data de Nascimento: " placeholder="data de naicimento"><br>
-                            <select id="cursos" name="Curso Selecionado: " >
+                            <input placeholder="Nome: " type="text" name="Nome Completo"><br>
+                            <input type="text" name="biea" placeholder="Bilhete de Indeintidade ou Cartao de Eleitor"><br>
+                            <input type="text" name="czaf" placeholder="data de naicimento"><br>
+                            <select id="cursos" name="tudis" >
 
                                 <option value="Maquinas Pesadas">Selecionar Curso</option>
                                 <option value="Maquinas Pesadas">Maquinas Pesadas</option>
