new at about form security
Signed-off-by: Win_Score <ws25jan19@gmail.com>

--- a/inscricao.html
+++ b/inscricao.html
@@ -156,9 +156,9 @@
             <div>
             <h4>Mais informacao sobre CFRV</h4>
             <ul>
-                <li>Whatsapp: 879898229</li>
-                <li>Email: Centrofrvida@gmail.com</li>
-                <li>Contacto: 879349159</li>
+                <li>Whatsapp: 862111821</li>
+                <li>Email: anselmoservic142@gmail.com</li>
+                <li>Contacto: 862111821</li>
                 <li>Local: Cidade de Chimoio
                 </li>
                 
