--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                 <!--main text-->
                 <div class="main-text">
 
-                    <h2>Centro de Formacao</h2>
-                    <h1>Ramo da Vida
-                    </h1>
+                    <p style="font-size: 30px; color: white;"><b>Centro de Formacao</b></p>
+                    <p style="font-size: 40px; color: white;"><b>Ramo da Vida</b>
+                    </p>
 
                     <div>
                         <a href="inscricao.html"><button class="btn-gradiente">Faca a Sua Inscricao</button></a>
@@ -85,19 +85,19 @@
             <!--separection type curses-->
             <div class="division-numbers">
             <p>
-                <span>12 cursos</span><br>
+                <span>7 cursos</span><br>
                 tecnicos
 
 
             </p>
             <p>
-                <span>4 cursos</span><br>
+                <span>2 cursos</span><br>
                 linguisticos
 
 
             </p>
             <p>
-                <span>14 cursos</span><br>
+                <span>8 cursos</span><br>
                 Admistrativos
 
 
@@ -224,9 +224,9 @@
             <div>
             <h4>Mais informacao sobre CFRV</h4>
             <ul>
-                <li>Whatsapp: 879898229</li>
-                <li>Email: Centrofrvida@gmail.com</li>
-                <li>Contacto: 879349159</li>
+                <li>Whatsapp: 862111821</li>
+                <li>Email: anselmoservic142@gmail.com</li>
+                <li>Contacto: 862111821</li>
                 <li>Local: Cidade de Chimoio
                 </li>
                 
